# ctr-project-wb

./: README.md  app.py  pyproject.toml
src/entities/: train_pipeline_params.py
src/inference/: make_concurrent_request.py  make_request.py
tests/: conftest.py
tests/models/: test_integration_inference.py  test_model_fetch.py
