[tool.poetry]
name = "ctr-project-wb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
numpy = "1.26.4"
scikit-learn = "1.5.2"
pandas = "2.2.2"
catboost = "1.2.7"
marshmallow-dataclass = "8.5.8"
marshmallow = "3.17.0"
fastapi = "0.114.2"
uvicorn = "0.30.6"
httpx = "0.27.2"
pyarrow = "17.0.0"
python-multipart = "0.0.9"
pytest-asyncio = "0.24.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
